styles/_atoms.scss
%rounded-with-shadow {
  border-radius: 50%;
  background-color: $color_white;
  box-shadow: $default-box-shadow;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 0 auto;
  transition: $default-transition;

  &:hover,
  &:focus {
    box-shadow: $default-box-shadow--hover;
  }
}

button {
  &:focus-visible {
    outline: auto 1px;
  }
}

a {
  color: inherit;
  text-decoration: underline;
  display: inline-block;
  transition: opacity 0.2s ease-out;

  &:hover,
  &:focus {
    opacity: 0.6;
  }
}

// Buttons
.btn {
  @extend %text-label;
}
.icon-button {
  @extend %rounded-with-shadow;
  width: $icon-button-size;
  height: $icon-button-size;
  color: #212322;

  svg {
    width: 30px;
    height: auto;
  }

  &.small {
    width: $icon-button-size--small;
    height: $icon-button-size--small;

    svg {
      width: 20px;
    }
  }
}

.link-button {
  text-decoration: none;
  border-radius: 20px/50%;
  background-color: $color_white;
  box-shadow: $default-box-shadow;
  transition: $default-transition;
  padding: 8px 15px;
  text-transform: uppercase;
  font-size: $font-size-xs;
  letter-spacing: 0.15em;

  &:hover,
  &:focus {
    opacity: 1;
    box-shadow: $default-box-shadow--hover;
  }

  @include media-breakpoint-up(sm) {
    font-size: $font-size-xsm;
    padding: 12px 30px;
  }
}

.round-wp {
  display: inline-block;
  overflow: hidden;
  border-radius: 50%;
  border: 8px solid $color-white;
  box-shadow: $default-box-shadow;
  background-color: $color-white;
  max-width: $round-image-size;
  margin: 0 auto;
  object-fit: cover;

  &.size--big {
    max-width: $round-image-size-big;
  }
  img {
    display: block;
    transform: scale(1.05);
    aspect-ratio: 1/1;
    object-fit: cover;
  }

  @include media-breakpoint-up(md) {
    border-width: 12px;
  }

  &#video-container {
    border: 4px solid $color-white;

    @include media-breakpoint-up(md) {
      border-width: 8px;
    }

    @include media-breakpoint-up(lg) {
      border-width: 12px;
    }
  }
}

.overlay {
  z-index: 10;
  position: fixed;
  background: rgba($color_white, 0.6);
  backdrop-filter: blur(80px);
  will-change: opacity;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  padding: 76px 0; // height of header on mobile.

  @include media-breakpoint-up(md) {
    padding: $default-separation 0;
  }

  @supports not ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
    background-color: rgba($color_white, 0.95);
  }
}

.close-popup {
  display: flex;
  align-items: center;
  position: fixed;
  padding-left: 12px;
  top: 18px;
  right: 17px;
  z-index: 1;
  color: #212322;

  @include media-breakpoint-up(sm) {
    right: 24px;
  }

  &::after {
    content: "";
    display: block;
    width: 40px;
    height: 40px;
    background: url("../public/svg/close.svg") no-repeat center center;
  }
}

.hide-sm {
  @include media-breakpoint-down(sm) {
    display: none;
  }
}

.visually-hidden {
  position: absolute;
  left: -10000px;
  top: auto;
  width: 1px;
  height: 1px;
  overflow: hidden;
}

